Fixes Copy and QR Code buttons in desktop views (#389)
* fix sizing on buttons: copy button would resize and qr code out of bounds of button

* fix sizing on buttons: copy button would resize and qr code out of bounds of button

--- a/client/src/components/LinkDisplay/Style.module.css
+++ b/client/src/components/LinkDisplay/Style.module.css
@@ -189,11 +189,11 @@
   }
 
   .copyButton {
-    width: 100px;
+    width: 125px;
   }
 
   .qrButton {
-    width: 100px;
+    width: 125px;
     transform: none;
   }
 
